fixed spacing and font sizes

--- a/css/main.css
+++ b/css/main.css
@@ -104,7 +104,7 @@ section, summary, time, mark, audio, video {
 			display: block;
 			color: white;
 			text-align: center;
-			padding: 14px 16px;
+			padding: 1em;
 			text-decoration: none;
 		  }
 
@@ -118,7 +118,7 @@ section, summary, time, mark, audio, video {
 			display: block;
 			color: white;
 			text-align: center;
-			padding: 14px 16px;
+			padding: 16px 16px;
 			text-decoration: none;
 			background-color:#e68a5f;
 		  }	
@@ -304,6 +304,13 @@ div.headerElements:before {
 		letter-spacing: -0.035em;
 		margin: 1.3em 0 0 0;
 	}
+	h3 {
+		font-size: 2.75em;
+		font-weight: 700;
+		line-height: 1.3;
+		letter-spacing: -0.035em;
+		margin: 0 0 0 0;
+	}
 
 		h1 a {
 			color: inherit;
@@ -325,19 +332,21 @@ div.headerElements:before {
 
 		}
 
-	h3, h5 {
+		h2 {
+			font-weight: 900;
+			line-height: 1.5;
+			margin: 1 0em;
+			text-transform: uppercase;
+			letter-spacing: -0.035em;
+		}
+	h5 {
 		font-weight: 900;
 		line-height: 1.5;
-		margin: 0 0 1em 0;
+		margin: 1 0em;
+		padding: 0 0 0 1em;
 		text-transform: uppercase;
 		letter-spacing: -0.035em;
-	}
-	h2 {
-		font-weight: 900;
-		line-height: 1.5;
-		margin: 0;
-		text-transform: uppercase;
-		letter-spacing: -0.035em;
+		background-color:#a5bfd3;
 	}
 
 	h4 {
@@ -360,11 +369,7 @@ div.headerElements:before {
 		}
 
 	h2 {
-		font-size: 1.1em;
-	}
-
-	h3 {
-		font-size: 1em;
+		font-size: 0.7em;
 	}
 
 	h4 {
@@ -372,7 +377,7 @@ div.headerElements:before {
 	}
 
 	h5 {
-		font-size: 0.7em;
+		font-size: 1.1em;
 	}
 
 	h6 {
@@ -547,6 +552,7 @@ div.headerElements:before {
 
 	.image3 {
 		margin-top: 1em;
+		margin-right: 1em;
 		position: relative;
 		display: flex;
 		list-style-type: none;
@@ -619,7 +625,7 @@ div.headerElements:before {
 		margin-right: 100px;
 		margin-left: 100px;
 		font-size: 16pt;
-		letter-spacing: -0.035em;
+		letter-spacing: -0.05em;
 		font-weight: bold;
 	  }
 
@@ -635,9 +641,9 @@ div.headerElements:before {
 	  p.p3{
 		margin-top: 0em;
 		margin-bottom: 1em;
-		margin-right: 100px;
-		margin-left: 30px;
-		font-size: 16pt;
+		margin-right: 1em;
+		margin-left: 1em;
+		font-size: 14pt;
 		letter-spacing: -0.035em;
 	  }
 	  p.p4 {
@@ -682,7 +688,7 @@ header {
 	}
 
 		#footer > .inner {
-			margin-left: 100px;
+			margin-left: 3em;
 			display: -moz-flex;
 			display: -webkit-flex;
 			display: -ms-flex;
@@ -703,15 +709,15 @@ header {
 
 	#wrapper > * > .inner {
 		width: 100%;
-		max-width: 68em;
+		max-width: 90em;
 		margin: 0 auto;
-		padding: 0 2.5em;
+		padding: 0 3em;
 	}
 
 		@media screen and (max-width: 736px) {
 
 			#wrapper > * > .inner {
-				padding: 0 1.25em;
+				padding: 0 1em;
 			}
 
 		}
